# cli

./: .gitignore  README.md  pyproject.toml
drey_cli/: __init__.py  ai_helper.py  main.py
